# youtube-todo-app

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  start_app.sh  start_app_ngrok.sh
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4f5595aee0e8_create_initial_tables.py  a1b2c3d4e5f6_add_check_constraint_and_triggers.py  b2c3d4e5f6a7_add_unique_constraints_to_histories.py  c3d4e5f6a7b8_lowercase_day_of_week.py  d4e5f6a7b8c9_add_email_to_users.py  e5f6a7b8c9d0_add_workout_history_expires_days.py
backend/app/: main.py
backend/app/api/: auth.py  recurrences.py  settings.py  tags.py  today.py  todo_histories.py  videos.py  workout_histories.py
backend/app/constants/: __init__.py  enums.py
backend/app/core/: config.py  database.py  date.py  dependencies.py  types.py  validators.py
backend/app/crud/: __init__.py  recurrence.py  tag.py  todo_history.py  user.py  video.py  video_tag.py  workout_history.py
backend/app/models/: __init__.py  base.py  tag.py  todo_history.py  user.py  video.py  video_recurrence.py  video_tag.py  video_weekday.py  workout_history.py
backend/app/services/: recurrence_service.py  settings_service.py  video_service.py
backend/tests/: conftest.py  test_imports.py
backend/tests/api/: conftest.py  test_auth.py  test_authorization.py  test_health.py  test_recurrences.py  test_settings.py  test_tags.py  test_today.py  test_todo_histories.py  test_videos.py  test_workout_histories.py
backend/tests/integration/: test_cascade.py  test_constraints.py  (+1 more)
(+98 files in other folders)
