[project]
name = "youtube-todo-app"
version = "0.1.0"
description = "YouTube workout todo app backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "psycopg2-binary>=2.9",
    "uvicorn>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
